# nfgo_project

./: MAPPO_solution.ipynb  README.md  VDN_baseline.ipynb  mappo_config.yaml  mappo_main.py  tips.txt
MAPPO_sandbox/: .gitignore  README.md  piptest.py  pyproject.toml  requirements.txt
MAPPO_sandbox/exp/01_mappo/: .gitignore  agent.py  config.py  env.py  main.py  ppo_lib.py
MAPPO_sandbox/tests/: test_framestack.py
submission_vdn/agents/agent_4/: agent_config.yaml
